<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BlackadderComActivity!</string>
    <string name="app_name">VOBA</string>
    <string name="clientIdHint">Enter client ID</string>
    <string name="receiveVoice">Subscribe Voice</string>
    <string name="sendVoice">Publish Voice</string>
    <string name="init">Initialise</string>
    <string name="test">Test</string>
    <string name="codec_pcm">PCM</string>
    <string name="codec_speex">Speex</string>
    <string name="ptt">Push to Talk</string>
    <string name="sendVideo">Publish Video</string>
    <string name="recvVideo">Subscribe Video</string>
    <string name="pubSpeed">Publish Speed</string>
    <string name="subSpeed">Subscribe Speed</string>
    
    <string-array name="sample_rate">
        <item >16 kHz</item>
        <item >22.05 kHz</item>
        <item >32 kHz</item>
        <item >44.1 kHz</item>
        <item >48 kHz</item>
    </string-array>
    
    <string-array name="video_size">
        <item >240x160</item>
        <item >400x240</item>
        <item >480x320</item>
        <item >720x480</item>
    </string-array>

</resources>