<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/clientIdInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="16"
        android:hint="@string/clientIdHint" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_init"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init" />

    <CheckBox
        android:id="@+id/chk_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendVoice" />

    <CheckBox
        android:id="@+id/chk_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receiveVoice" />

</LinearLayout>